:iphone: responsive: mostly donw

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@ title: Home
         <a href="/#about">About</a>
         <a href="/#location">Location</a>
       </nav>
-      <a class="btn" href="tel:">775.1234567</a>
+      <a class="btn" href="tel:7757828776">775.782.8776</a>
     </div>
   </div>
 </header>
@@ -21,9 +21,11 @@ title: Home
       <img src="/assets/images/hero.jpg" alt="Young girl with dark hair">
     </div>
     <div class="container">
-        <div class="scroll"><span></span></div>
+        <a href="#services" class="scroll"><span></span></a>
       <h1>
-          Deja Vu Salon
+          Deja 
+          &nbsp;&nbsp;&nbsp;Vu 
+          Salon
       </h1>
       
       <div class="social">
@@ -106,7 +108,7 @@ title: Home
   </div>
 </section>
 
-<section class="centered">
+<section class="centered" id="about">
   <div class="inner">
     <div class="container">
       <h2>
