--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,10 @@ title: Home
         <a href="/#about">About</a>
         <a href="/#location">Location</a>
       </nav>
-      <a class="btn" href="tel:7757828776">775.782.8776</a>
+      <a class="btn" href="tel:7757828776">
+        <span>775.782.8776</span>
+        {% include svg-phone.html %}
+      </a>
     </div>
   </div>
 </header>
