:rocket: deploying: product name changes

--- a/site/index.html
+++ b/site/index.html
@@ -97,11 +97,11 @@ title: Home
     <div class="container row">
       <div class="item">
         {% include svg-product-1.html %}
-        <h4>Kendra</h4>
+        <h4>Kenra</h4>
       </div>
       <div class="item">
           {% include svg-product-2.html %}
-        <h4>Morroccon Oil</h4>
+        <h4>Moroccan Oil</h4>
       </div>
       <div class="item">
           {% include svg-product-3.html %}
