--- a/site/index.html
+++ b/site/index.html
@@ -118,7 +118,6 @@ title: Home
         About
       </h2>
       <p>Since 2006, we have been dedicated to serving the public and delivering customized services to our clients. At our salon, we value the importance of quality, education, and customer loyalty.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
   </div>
 </section>  
@@ -137,13 +136,13 @@ title: Home
         </div>
         <div class="hours">
           <div class="label">
-            Monday - Friday
+            Monday - Saturday
           </div>
           <div>
-            9am - 5pm
+            9am - 6pm
           </div>
           <div class="label">
-            Saturday - Sunday
+            Sunday
           </div>
           <div>
             Closed
