:lipstick: style: more progress on blocks

--- a/site/index.html
+++ b/site/index.html
@@ -18,3 +18,11 @@ title: Home
 {% include text-with-image-block.liquid theme='lt' reverse="reverse" %}
 {% include text-with-image-block.liquid theme='med' reverse="reverse" %}
 {% include text-with-image-block.liquid theme='dark' reverse="reverse" %}
+
+{% include accent-text-block.liquid theme='lt' %}
+{% include accent-text-block.liquid theme='med' %}
+{% include accent-text-block.liquid theme='dark' %}
+
+{% include text-with-image.liquid theme='lt' %}
+{% include text-with-image.liquid theme='med' %}
+{% include text-with-image.liquid theme='dark' %}
