:rocket: deploying: everything

--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,47 @@ layout: default
 title: Home
 ---
 
-{% include center-text.liquid theme='lt' btn-dest="/light-theme" btn-text="Light Theme" %}
+<!--{% include center-text.liquid theme='lt' btn-dest="/light-theme" btn-text="Light Theme" %}
 {% include center-text.liquid theme='med' btn-dest="/medium-theme" btn-text="Medium Theme" %}
-{% include center-text.liquid theme='dark' btn-dest="/dark-theme" btn-text="Dark Theme" %}
+{% include center-text.liquid theme='dark' btn-dest="/dark-theme" btn-text="Dark Theme" %}-->
+
+<div class="three-row">
+    {% include age-blob.liquid %}
+    {% include cake.liquid %}
+</div>
+
+<div class="one-row">
+    {% include year-of-the.liquid %}
+</div>
+
+<div class="one-row">
+    {% include scrolling-text.liquid %}
+</div>
+
+<div class="one-row">
+    {% include strings.liquid %}
+</div>
+
+<div class="three-row">
+    {% include sookie.liquid %}
+    {% include rolling-text.liquid %}
+</div>
+
+<div class="one-row">
+    {% include days.liquid %}
+</div>
+
+<div class="two-row">
+    {% include face.liquid %}
+    {% include birth-date.liquid %}
+</div>
+
+<div class="three-row">
+    {% include glitch.liquid %}
+    {% include background-text.liquid %}
+</div>
+
+<div class="one-row" style="height:unset">
+    <!--{% include kinetic-type.liquid %}-->
+    {% include labyrinth.liquid %}
+</div>
